--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CloudStore for Chinese</title>
+    <title>CloudStore for Chinese (구름가게-중국버전)</title>
 </head>
 <body>
 
